--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
   display: none;
   width: 100%;
 }
+.power-btn{
+  filter: drop-shadow(10px 7px 10px red);
+  animation-name: shadow;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+@keyframes shadow{
+  from{filter: drop-shadow(10px 7px 10px red);}
+  to{ filter: drop-shadow(10px 7px 0px red);}
+}
