--- a/style.css
+++ b/style.css
@@ -7,8 +7,52 @@
   animation-name: shadow;
   animation-duration: 2s;
   animation-iteration-count: infinite;
+  width: 30%;
+  margin-top: 3em;
 }
 @keyframes shadow{
   from{filter: drop-shadow(10px 7px 10px red);}
   to{ filter: drop-shadow(10px 7px 0px red);}
+}
+
+.image-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.neon-circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: 0 0 20px rgba(0, 255, 0, 0.5), 
+              0 0 30px rgba(0, 255, 0, 0.5), 
+              0 0 40px rgba(0, 255, 0, 0.5), 
+              0 0 50px rgba(0, 255, 0, 0.5);
+  animation: neon 2s linear infinite;
+}
+
+@keyframes neon {
+  0%, 100% {
+      box-shadow: 0 0 20px rgba(0, 255, 0, 0.5), 
+                  0 0 30px rgba(0, 255, 0, 0.5), 
+                  0 0 40px rgba(0, 255, 0, 0.5), 
+                  0 0 50px rgba(0, 255, 0, 0.5);
+  }
+  50% {
+      box-shadow: 0 0 20px rgba(0, 255, 0, 1), 
+                  0 0 30px rgba(0, 255, 0, 1), 
+                  0 0 40px rgba(0, 255, 0, 1), 
+                  0 0 50px rgba(0, 255, 0, 1);
+  }
 }
