--- a/os/style.css
+++ b/os/style.css
@@ -66,7 +66,7 @@ body {
 
 .app-img{
     border-radius: 10px;
-    width: 6em;
+    width: 9em;
 }
 .app-txt{
     font-weight: bolder;
@@ -89,7 +89,7 @@ body {
     font-family: "Workbench", sans-serif;
     font-optical-sizing: auto;
     font-weight: bolder;
-    font-size: 2em;
+    font-size: 2.5em;
     font-style: normal;
     font-variation-settings:
       "BLED" 0,
@@ -106,4 +106,7 @@ body {
 
 .hide{
     visibility: hidden;
+}
+#tap:hover{
+  opacity: 0.8;
 }
