--- a/os/style2.css
+++ b/os/style2.css
@@ -8,7 +8,7 @@
 */
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Courgette&family=Delicious+Handrawn&family=Jersey+10&family=Noto+Kufi+Arabic:wght@100..900&family=Noto+Sans+Malayalam:wght@100..900&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Scribble&family=Rubik:ital,wght@0,300..900;1,300..900&family=Shadows+Into+Light&family=Workbench&display=swap');
 /* copy from style.css */
 
 .icon{
@@ -262,6 +262,46 @@ table{
   text-align: center;
 }
 .dialog-connect button{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.dialog-manual h1{
+text-align: center;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.dialog-manual video{
+  height: 22em;
+  border: none;
+}
+.dialog-manual button{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.dialog-admin h1{
+  text-align: center;
+}
+.dialog-admin img{
+  border-radius: 50%;
+  width: 20em;
+  align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.dialog-admin p{
+  font-family: "Courgette", cursive;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 1.5em;
+}
+.dialog-admin h4{
+  text-align: center;
+}
+.dialog-admin button{
   text-align: center;
   margin-left: auto;
   margin-right: auto;
