--- a/os/style.css
+++ b/os/style.css
@@ -110,3 +110,15 @@ body {
 #tap:hover{
   opacity: 0.8;
 }
+
+/* Preloader */
+
+/* Preloader */
+#preloader{
+  background: white url(images/loading.gif) no-repeat center center;
+  background-size: 50%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
