--- a/os/style.css
+++ b/os/style.css
@@ -115,7 +115,7 @@ body {
 
 /* Preloader */
 #preloader{
-  background: white url(images/loading.gif) no-repeat center center;
+  background: white url(images/loading.mp4) no-repeat center center;
   background-size: 50%;
   height: 100vh;
   width: 100%;
